--- a/e-commerce/src/components/custom-button/custom-button.scss
+++ b/e-commerce/src/components/custom-button/custom-button.scss
@@ -5,13 +5,14 @@
     letter-spacing: 0.5px;
     line-height: 50px;
     padding: 0 35px 0 35px;
-    font-size: 15px;
+    font-size: 12px;
     background-color: black;
     color: white;
     text-transform: uppercase;
     font-family: 'Open Sans Condensed';
     font-weight: bolder;
     border: none;
+    overflow: hidden;
     cursor: pointer;
 
     &:hover {
