--- a/e-commerce/src/components/checkout-item/checkout-item.scss
+++ b/e-commerce/src/components/checkout-item/checkout-item.scss
@@ -22,4 +22,22 @@
     .price {
         width: 23%;
     }
+
+    .quantity {
+        padding-left: 12px;
+        display: flex;
+
+        .arrow {
+            cursor: pointer;
+        }
+
+        .value {
+            margin: 0 10px;
+        }
+    }
+
+    .remove-button {
+        padding-left: 12px;
+        cursor: pointer;
+    }
 }
